Fix PR c++/42915

gcc/cp/ChangeLog:
	PR c++/42915
	* typeck.c (get_template_parms_of_dependent_type): Try getting
	the template parameters fromt the type itself first.

gcc/testsuite/ChangeLog:
	PR c++/42915
	g++.dg/other/crash-9.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156514 138bc75d-0d04-0410-961f-82ee72b054a4